dgm2740/boston-city/scss/small.scss
@import "variables";

/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
html {
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}

/*  apply a natural box layout model to all elements  */
* {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  font-family: $font;
  font-size: 16px;
}

body {
  min-width: 320px; 
}

nav {background: $menuColor;}

/*--Material Icons Styling--*/

.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 300,
  'GRAD' 200,
  'opsz' 48
}

header {
  height: 100px;
  background-image: url('/dgm2740/boston-city/images/headerPic.jpeg');
  color: lighten($blue, 49%);
  text-shadow: 2px 2px 2px black;
  .scrim {background-color: rgba($color: #000000, $alpha: .5); height: 100%; display: flex; flex-direction: column; justify-content: center;}
  h1 {font-size: 1.5rem; margin: 0; padding: 0 2vw; font-weight: $bold;}
  h2 {font-size: .75rem; margin: 0; padding: 0 2vw; font-weight: $light;}
  img {
    width: 100%;
    height: auto;
  }
}

/*----------- MAIN --------------*/

main {box-shadow: 1px 6px 1rem 1px rgba(0,0,0,.5), -1px 6px 1rem 1px rgba(0,0,0,.5);}

main section.cardGrid {
    padding: 1rem 2vw;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    div:nth-child(1) {background-image: url('../images/card1.jpeg');}
    div:nth-child(2) {background-image: url('../images/card2.jpeg');}
    div:nth-child(3) {background-image: url('../images/card3.jpeg');}
    div:nth-child(4) {background-image: url('../images/card4.jpeg');}
    div:nth-child(1) a {
      background-color: darken($blue, 20%);
    }
    div:nth-child(2) a {
      background-color: darken($gold, 30%);
    }
    div:nth-child(3) a {
      background-color: darken($blue, 30%);
    }
    div:nth-child(4) a {
      background-color: darken($gold, 40%);
    }
    div a:hover {
      background: none;
      text-shadow: 0 0 4px black;
    }
    .card {
        margin-bottom: 1rem;
        border: 1px solid black;
        width: 96vw;
        height: 300px;
        text-align: center;
        h2{font-size: 1rem;}
        span{font-size: 3rem;}
        a {
          padding: 1rem 0;
          color: #fff;
          display: block;
          width: 100%;
          height: 100%;
          text-decoration: none;
          transition: all .5s ease-in;
        }
    }

}

.title {margin: 0 2vw; font-size: 2rem; color: darken($blue, 10%); font-weight: $bold;}

/*----------- Image Slider --------------*/
.swiper-wrapper {
  margin-bottom: 25px;
}
.swiper {
  width: 100%;
  height: auto;
  img {width: 100%; height: auto; display: block;}
  p {
    margin: 0;
    padding: .4rem 2vw;
    background-color: rgba($color: #000000, $alpha: .5);
    text-align: center;
    color: white;
    transform: translateY(-100%);
    position: absolute;
    width: 100%;

  }
}




/*----------- FOOTER --------------*/

footer {
    background-color: darken($blue, 20%);
    color: #fff;
    padding: 0.5rem 0;
    text-align: center;
  
    a {
      color: #fff;
    }
  }
  
  /*----- Clearfix: Force an Element not to collapse -----*/
  .clearfix:after {
    content: "";
    display: table;
    clear: both;
  }

